@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-19T16:17:09Z",
-  "count_outdated" : 399,
-  "uniques_outdated" : 217,
-  "count" : 422,
+  "timestamp" : "2022-07-20T01:01:15Z",
+  "count_outdated" : 402,
+  "uniques_outdated" : 218,
+  "count" : 424,
   "uniques" : 229,
   "clones" : [
-    {
-      "timestamp": "2022-07-05T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-07-06T00:00:00Z",
       "count": 2,
